@@ -1,3 +1,8 @@
+2006-03-28  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkWindow.c (CreateTopLevelWindow): use thread exit
+	handler for DeleteWindowsExitProc.
+
 2006-03-28  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc:   Avoid pipe problems on win98.
